# ShapeDeformer

./: .gitignore  CMakeLists.txt  README.md
lib/WunderSVD/: WunderSVD3x3.h
res/: cylinder.off  grid.def  grid.off  grid.sel  simple-deformed.off  simple.def  simple.off  simple.sel  uniform.off  uniform.sel
res/t/: plane.def  plane.off  plane.sel  simple.def  simple.off  simple.sel  sphere.def  sphere.sel
src/: deformer.cpp  main.cpp  mesh.cpp  mesh.hpp  parser.cpp  solver.cpp  solver.hpp
